making finishing touches

--- a/02week/pigLatin.html
+++ b/02week/pigLatin.html
@@ -8,14 +8,14 @@
 </head>
 <body>
   <div>
-    <section class="userInput">
-      <h1>Welcome</h1>
+    <section class="userInput" class="pop">
+      <h1 class="fade in">Welcome</h1>
       <h3>To My Pig Latin Translator</h2>
       <p>Please enter the word you would like to translate</p>
       <input type="text" id="userWord"> </input>
       <button>Submit</button>
     </section>
-    <section class="result">
+    <section class="result" class="pop">
       <h1>Your translated word is:</h1>
      <P id="result" class="blinking"></P>
     </section>
