adding a hover event

--- a/07week/adressBook/adressBook.html
+++ b/07week/adressBook/adressBook.html
@@ -6,7 +6,9 @@
   <title>Document</title>
 </head>
 <body>
-  
+  <section id="friends">
+
+  </section>
 </body>
 <script src="adressBook.js"></script>
 </html>
