--- a/07week/adressBook/adressBook.html
+++ b/07week/adressBook/adressBook.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+  <link rel="stylesheet" href="adressbook.css">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,7 +8,8 @@
 </head>
 <body>
   <section id="friends">
-
+    <h1>Address Book</h1>
+    <!-- <h4>Hover to see their address</h4> -->
   </section>
 </body>
 <script src="adressBook.js"></script>
