--- a/07week/adressBook/adressBook.html
+++ b/07week/adressBook/adressBook.html
@@ -9,7 +9,7 @@
 <body>
   <section id="friends">
     <h1>Address Book</h1>
-    <!-- <h4>Hover to see their address</h4> -->
+    <h4>Hover To See Their City</h4>
   </section>
 </body>
 <script src="adressBook.js"></script>
