--- a/07week/adressBook/adressBook.html
+++ b/07week/adressBook/adressBook.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Address Book</title>
 </head>
 <body>
   <section id="friends">
