--- a/08week/appIdea/app.html
+++ b/08week/appIdea/app.html
@@ -8,12 +8,15 @@
 </head>
 <body>
   <h1>Mikes Mobile Oil</h1>
-  <h3>Please log in to continue</h3>
+  <h4>Please log in to continue</h4>
   <section>
+    <div>
     <input type="text" value="username">
     <input type="text" value="password">
     <a href="mainPage.html">log in</a>
     <a href="signUp.html">Sign up</a>
+    </div>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dignissimos id quidem alias eum? Perferendis omnis, delectus iusto voluptas provident obcaecati aliquam facilis ea laudantium cupiditate doloribus nisi assumenda at et?</p>
   </section>
 </body>
 </html>
