--- a/08week/appIdea/signUp.html
+++ b/08week/appIdea/signUp.html
@@ -34,6 +34,10 @@
       <h3>Reenter Password</h3>
       <input type="text">
     </ul>
+    <ul>
+      <h3>Please Enter Credit Card Number</h3>
+      <input type="text">
+    </ul>
     <button> Sign up</button>
   </section>
   
